????? 1.6.0.1
    * YamlReader.read_yaml_file uses new function utils.read_file_or_url
    * new config var INFO_MAP_FILES_URL_PREFIX to better define INFO_MAP_FILE_URL
    * info_map files split from the main info_map.txt will be added to the main info_map.txt so size and checksum are known
    * some more progress message during copy snd sync batch file creation
    * additional info_map files are read during InstlInstanceSync.read_remote_info_map
    * SVNTable.read_from_file will not clear the database by calling clear_all() this will allow to read additional info_maps in InstlInstanceSync.read_remote_info_map
    * new function utils.read_file_or_url will gradually replace class open_for_read_file_or_url - opens urls using requests modules, for better compatibility with CloudFront
    * creation of sql views & triggers from a text file
    * better config var definitions for admin
    * full info_map.txt is not called full_info_map.txt
    * new func IndexItemsTable.get_unique_detail_values
    * reimplemented InstlAdmin.do_filter_infomap with new database tables and columns
    * utils.read_file_or_url does some caching if give url, local file and checksum
    * utils.check_file_checksum: prevent reading the file if file_path or expected_checksum is None
    * changed some import order so instl will run properly when compiled
    * parallel_run start subprocesses with bufsize=0, maybe this will improve log messages output rate
    * intl.spec: add *.sql to defaults folder

10/9/2017 1.6.0.0

    user visible changes:
    * sync will work with non signed urls and cloud front cookies
    * default timeout of 300 seconds (hardcoded) when instl internaly reads urls (not the synced urls which use CURL_MAX_TIME)

    admin visible changes:
    * support separate info_map.txt files for specific iid

27/8/2017 1.5.3.0

    admin visible changes:
    * do_up2s3: better variable names